[tool.poetry]
name = "backend-v2"
version = "0.1.0"
description = ""
authors = ["FLiotta <liottafabrizio@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
alembic = "1.7.7"
uvicorn = "0.15.0"
SQLAlchemy = "1.4.28"
PyJWT = "2.3.0"
flake8 = "4.0.1"
fastapi = "^0.103.1"
databases = "0.5.3"
boto3 = "1.20.24"
numpy = "1.21.5"
opencv-python = "4.5.4.60"
nanoid = "2.0.0"
python-multipart = "0.0.5"
python-dateutil = "2.8.2"
aiosqlite = "^0.17.0"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"
asyncpg = "^0.25.0"
firebase-admin = "^5.2.0"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
simplelimiter = "0.1.3"
redis = "5.0.0"
boto3-stubs = {extras = ["s3"], version = "^1.34.103"}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
httpx = "^0.25.2"
pytest = "6.2.5"
black = "^23.11.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
